Geometry node Plane primitive does not show wireframe in viewport #86874

Closed
opened 2021-03-24 08:21:58 +01:00 by Jesse Yurkovich · 15 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1070 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.67

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-23 18:34, hash: 3ea1779365
Worked: never

Short description of error
If you enable the wireframe overlay in the 3d viewport, and use geometry nodes to create a new "Plane" primitive, the rows/columns do not show. This is odd because the other geometry node primitives like cylinder and sphere do work correctly.

Exact steps for others to reproduce the error
geonode-no-wireframe.blend

  • Load attached file
    • Contains a Plane (5x5 grid) created with geometry nodes and a Sphere created with geometry nodes
  • Notice that the Sphere is properly displaying its wireframe
  • Notice the Plane does not show its wireframe
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1070 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.67 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-23 18:34, hash: `3ea1779365` Worked: never **Short description of error** If you enable the wireframe overlay in the 3d viewport, and use geometry nodes to create a new "Plane" primitive, the rows/columns do not show. This is odd because the other geometry node primitives like cylinder and sphere do work correctly. **Exact steps for others to reproduce the error** [geonode-no-wireframe.blend](https://archive.blender.org/developer/F9906679/geonode-no-wireframe.blend) - Load attached file - Contains a Plane (5x5 grid) created with geometry nodes and a Sphere created with geometry nodes - Notice that the Sphere is properly displaying its wireframe - Notice the Plane does not show its wireframe
Author
Member

Added subscriber: @deadpin

Added subscriber: @deadpin

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Confirmed. Note that the Mesh Primitive grid doesn't have this issue. And if you apply the modifier you still need to go in and out of edit mode to see the wires.

Confirmed. Note that the Mesh Primitive grid doesn't have this issue. And if you apply the modifier you still need to go in and out of edit mode to see the wires.

[edit: never mind, this assert was for a different report.]

[edit: never mind, this assert was for a different report.]
Himanshi Kalra self-assigned this 2021-03-29 11:08:23 +02:00
Member

Looking into this, here are some observations
First:

  • Go to wireframe mode.
  • The wireframe shade is a bit lighter than other meshes.

Second:
It is impossible to select the Grid Mesh after deselecting.

image.png

Looking into this, here are some observations First: * Go to wireframe mode. * The wireframe shade is a bit lighter than other meshes. Second: It is impossible to select the Grid Mesh after deselecting. ![image.png](https://archive.blender.org/developer/F9913690/image.png)

@Calra what do you mean by "go to wireframe mode'? In master if I do this I see no wireframes inside the grid. Do you have a patch that shows it with faint lines?

Keep in mind that the report here refers to the Mesh Primitive grid from geometry nodes. Not the mesh created in the Object mode via the Shift+A menu.

@Calra what do you mean by "go to wireframe mode'? In master if I do this I see no wireframes inside the grid. Do you have a patch that shows it with faint lines? Keep in mind that the report here refers to the Mesh Primitive grid from geometry nodes. Not the mesh created in the Object mode via the Shift+A menu.
Member

Go to wireframe mode by pressing Z, (by default we are in Solid mode)
I have an attached image above and below,

  1. The right-most object in the image is Mesh Primitive Grid from Geometry Nodes (can you see its Outline(the rectangle) as fainter as compared to the other objects?)
  2. Second from the right is Mesh Primitive Icosphere node
  3. On the left are Grids added using Shift + A

Here is the image again:
faint_grid_geo_node.jpg

Steps for the Default Startup Scene:

  1. Split screen to go Geometry Nodes Editor.
  2. Add new Node tree.
  3. Add a Mesh Primitive Grid Geo Node.

Similarly add another Primitive Node (say UV sphere)

Compare the outlines (can be called wireframes of objects).
Observation:

  • The Mesh Primitive Grid Node wireframe is fainter as compared to other nodes.

  • Now, deselect everything (Alt + A)

  • Try selecting the Grid (added using Geo Nodes).

  • The Grid cannot be selected.

  • Try selecting the UV sphere (added using Geo Nodes).

  • The UV can be easily selected.

Go to wireframe mode by pressing Z, (by default we are in `Solid` mode) I have an attached image above and below, 1) The right-most object in the image is Mesh Primitive Grid from Geometry Nodes (can you see its Outline(the rectangle) as fainter as compared to the other objects?) 2) Second from the right is Mesh Primitive Icosphere node 3) On the left are Grids added using Shift + A Here is the image again: ![faint_grid_geo_node.jpg](https://archive.blender.org/developer/F9914353/faint_grid_geo_node.jpg) Steps for the Default Startup Scene: 1) Split screen to go Geometry Nodes Editor. 2) Add new Node tree. 3) Add a Mesh Primitive Grid Geo Node. Similarly add another Primitive Node (say UV sphere) Compare the outlines (can be called wireframes of objects). Observation: * The Mesh Primitive Grid Node wireframe is fainter as compared to other nodes. * Now, deselect everything (Alt + A) * Try selecting the Grid (added using Geo Nodes). * The Grid cannot be selected. * Try selecting the UV sphere (added using Geo Nodes). * The UV can be easily selected.
Member

The mesh gets hidden (like an invisible cloak) when other mesh is moved over it, while other meshes remain intact. The following behavior can be seen in video below:
Note: Pay attention to the grid mesh present inside the circle.
weird_grid_node_interaction0029-0750.mp4

The mesh gets hidden (like an invisible cloak) when other mesh is moved over it, while other meshes remain intact. The following behavior can be seen in video below: Note: Pay attention to the grid mesh present inside the circle. [weird_grid_node_interaction0029-0750.mp4](https://archive.blender.org/developer/F9914837/weird_grid_node_interaction0029-0750.mp4)
Author
Member

The primitives which do not use the BMesh ops are experiencing the issue. Today, that means Grid and Circles (with Triangle fan fills) for example.

Whatever the issue is, the solution probably lies in something that happens during the transition from BMesh to Mesh in normal cases.

The primitives which do not use the BMesh ops are experiencing the issue. Today, that means Grid and Circles (with Triangle fan fills) for example. Whatever the issue is, the solution probably lies in something that happens during the transition from BMesh to Mesh in normal cases.

Added subscriber: @Metricity-4

Added subscriber: @Metricity-4

Hi, I compared the original Mesh data with results from the earlier BMesh fix and noticed differences in the MEdge.flags. The flags were not set in the original code but adding ME_EDGEDRAW looks to resolve this issue.

I've added a patch that also includes ME_EDGERENDER as they often appear together.

Hi, I compared the original Mesh data with results from the earlier BMesh fix and noticed differences in the MEdge.flags. The flags were not set in the original code but adding ME_EDGEDRAW looks to resolve this issue. I've added a patch that also includes ME_EDGERENDER as they often appear together.
Himanshi Kalra removed their assignment 2021-04-02 06:24:05 +02:00
Member

Added subscriber: @Calra

Added subscriber: @Calra

This issue was referenced by 3fcac26362

This issue was referenced by 3fcac263622b25648601613d214044f8f2e49c1a

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Dalai Felinto self-assigned this 2021-04-02 10:45:42 +02:00
Sign in to join this conversation.
5 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#86874
No description provided.